--- a/src/Bundle/JoseFramework/Resources/views/data_collector/tab/jws/algorithms.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/tab/jws/algorithms.html.twig
@@ -1,6 +1,6 @@
 <h3>Available Signature Algorithms</h3>
 <p class="help">
-    The following table lists all signature/hashing algorithms available in this environment.
+    The following table lists all signature algorithms available in this environment.
 </p>
 <table>
     <thead>
@@ -29,6 +29,21 @@
             <td colspan="3">There is no signature algorithm. Did you installed a package providing signature algorithms?</td>
         </tr>
     {% endif %}
+    </tbody>
+</table>
+<h3>Available MAC Algorithms</h3>
+<p class="help">
+    The following table lists all MAC algorithms available in this environment.
+</p>
+<table>
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Alias</th>
+        <th>Message</th>
+    </tr>
+    </thead>
+    <tbody>
     {% set macAlgorithms = collector.getData().algorithm.algorithms %}
     {% if macAlgorithms['MAC'] is defined %}
         {% for alias, alg in macAlgorithms['MAC'] %}
