--- a/src/Bundle/JoseFramework/Resources/views/data_collector/template.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/template.html.twig
@@ -22,6 +22,10 @@
             <span class="sf-toolbar-status">{{ collector.getData().algorithm.types.signature }}</span>
         </div>
         <div class="sf-toolbar-info-piece">
+            <b>MAC Algorithms</b>
+            <span class="sf-toolbar-status">{{ collector.getData().algorithm.types.mac }}</span>
+        </div>
+        <div class="sf-toolbar-info-piece">
             <b>Key Encryption Algorithms</b>
             <span class="sf-toolbar-status">{{ collector.getData().algorithm.types.key_encryption }}</span>
         </div>
