some fixes: - source definitions was set for \Jose\Bundle\JoseFramework\DependencyInjection\Source\KeyManagement\JWKSource\JWK instead of \Jose\Component\Core\JWK which is proper instance for Symfony container to register with - in symfony profiler JWK tab, an error occurred because data variable is an array. calling data.jwk directly instead of data.seek('jwk')

--- a/src/Bundle/JoseFramework/Resources/views/data_collector/tab/keys/jwk.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/tab/keys/jwk.html.twig
@@ -17,7 +17,7 @@
         {% for id, data in collector.getData().key.jwk %}
             <tr>
                 <td>{{ id }}</td>
-                <td>{{ profiler_dump(data.seek('jwk')) }}</td>
+                <td>{{ profiler_dump(data.jwk) }}</td>
                 <td>
                     {% if data.analyze.count() == 0 %}
                         No message. All good!
