--- a/src/Bundle/JoseFramework/Resources/views/data_collector/tab/jws/mac_algorithms.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/tab/jws/mac_algorithms.html.twig
@@ -26,7 +26,7 @@
         {% endfor %}
     {% else %}
         <tr>
-            <td colspan="3">There is no MAC algorithm. Did you installed a package providing MAC algorithms?</td>
+            <td colspan="3">There is no MAC algorithm. Did you install a package providing MAC algorithms?</td>
         </tr>
     {% endif %}
     </tbody>
