--- a/src/Bundle/JoseFramework/Resources/views/data_collector/tab/jws/signature_algorithms.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/tab/jws/signature_algorithms.html.twig
@@ -26,7 +26,7 @@
         {% endfor %}
     {% else %}
         <tr>
-            <td colspan="3">There is no signature algorithm. Did you installed a package providing signature algorithms?</td>
+            <td colspan="3">There is no signature algorithm. Did you install a package providing signature algorithms?</td>
         </tr>
     {% endif %}
     </tbody>
