Remove old packages references

--- a/src/Bundle/Resources/views/data_collector/tab/jwe/content_encryption_algorithms.html.twig
+++ b/src/Bundle/Resources/views/data_collector/tab/jwe/content_encryption_algorithms.html.twig
@@ -30,8 +30,7 @@
                 No algorithm. You should consider the installation of the following packages or create your own
                 algorithm:
                 <ul>
-                    <li>web-token/jwt-encryption-algorithm-aescbc</li>
-                    <li>web-token/jwt-encryption-algorithm-aesgcm</li>
+                    <li>web-token/jwt-library</li>
                 </ul>
             </td>
         </tr>
