--- a/src/Bundle/Resources/views/data_collector/tab/jwe/key_encryption_algorithms.html.twig
+++ b/src/Bundle/Resources/views/data_collector/tab/jwe/key_encryption_algorithms.html.twig
@@ -29,12 +29,7 @@
             <td colspan="3">
                 No algorithm. Please consider the installation of the following packages or create your own algorithm:
                 <ul>
-                    <li>web-token/jwt-encryption-algorithm-aesgcmkw</li>
-                    <li>web-token/jwt-encryption-algorithm-aeskw</li>
-                    <li>web-token/jwt-encryption-algorithm-dir</li>
-                    <li>web-token/jwt-encryption-algorithm-ecdh-es</li>
-                    <li>web-token/jwt-encryption-algorithm-pbes2</li>
-                    <li>web-token/jwt-encryption-algorithm-rsa</li>
+                    <li>web-token/jwt-library</li>
                 </ul>
             </td>
         </tr>
