--- a/src/Bundle/Resources/views/data_collector/tab/jwe/compression_methods.html.twig
+++ b/src/Bundle/Resources/views/data_collector/tab/jwe/compression_methods.html.twig
@@ -1,7 +1,7 @@
 <h3>Compression Methods</h3>
 <p class="help">
     The compression methods are used to shrink the size of the tokens.<br>
-    Their use is optional, but may be needed in case of heavy payloads.
+    Their use is NOT recommended and will be removed in the next major release.
 </p>
 <table>
     <thead>
